# RemoteKeyboard

./: .gitignore  README.md  build_run.bat  config.toml  implementation_plan.md  task.md
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  mobile-android.yml  release.yml
.qwen/: rules.md
docs/: ADR-014-mouse-clamping.md  ADR-PINCH-ZOOM.md  ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  GITIGNORE.md  PROGRESS.md  PROTOCOL.md  PROTOCOL_AUDIT.md  ROADMAP.md  SPECIFICATION.md
mobile/: .gitignore  README.md  SETUP.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Flutter/: flutter_export_environment.sh
mobile/lib/: main.dart
mobile/lib/application/services/: command_service.dart  connection_service.dart  notification_service.dart  screen_stream_service.dart  services.dart
mobile/lib/application/use_cases/: process_key_press.dart  process_media_key.dart  process_touchpad_gesture.dart  use_cases.dart
mobile/lib/domain/: domain.dart
mobile/lib/domain/entities/: command.dart  command.g.dart  connection.dart  device.dart  device.g.dart
mobile/lib/domain/value_objects/: device.dart  keyboard.dart  mouse.dart
mobile/lib/infrastructure/config/: connection_preferences.dart
mobile/lib/infrastructure/mdns/: mdns_discovery.dart
mobile/lib/infrastructure/websocket/: websocket_client.dart
mobile/lib/presentation/screens/: connection_screen.dart  home_screen.dart  keyboard_screen.dart  media_screen.dart  settings_screen.dart  touchpad_screen.dart
mobile/lib/presentation/theme/: app_theme.dart
mobile/test/: smoke_test.dart  widget_test.dart
mobile/test/application/services/: notification_service_test.dart  screen_stream_service_test.dart
mobile/test/domain/entities/: command_test.dart  connection_test.dart  device_test.dart
mobile/test/helpers/: mock_services.dart  test_helpers.dart
mobile/test/integration/: connection_flow_test.dart  heartbeat_test.dart  notification_flow_test.dart  screen_streaming_test.dart
mobile/test/presentation/screens/: connection_screen_test.dart  home_screen_test.dart  keyboard_screen_test.dart  media_screen_test.dart  touchpad_screen_test.dart
mobile/test_client/: test_websocket.dart
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
pc/: .gitignore  Cargo.toml  config.toml  package.json  run.bat  run_test.bat  tauri.conf.json  test_commands.py  test_connection.ps1  test_server.py  test_websocket.ps1  test_ws.py
pc/frontend/: index.html
pc/icons/: README.md  create_ico.py
pc/src/: lib.rs
pc/src/application/: mod.rs  ports.rs  use_cases.rs
pc/src/domain/: mod.rs
pc/src/domain/entities/: command.rs  connection.rs  device.rs  mod.rs
pc/src/domain/services/: command_handler.rs  connection_manager.rs  device_discovery.rs  input_executor.rs  mod.rs
pc/src/domain/value_objects/: device.rs  keyboard.rs  mod.rs  mouse.rs
pc/src/infrastructure/: capture_manager.rs  mod.rs  screen_capture.rs  screen_capture_utils.rs
pc/src/infrastructure/config/: mod.rs
pc/src/infrastructure/connection/: manager.rs  mod.rs
pc/src/infrastructure/cursor/: linux.rs  macos.rs  mod.rs  traits.rs  windows.rs
pc/src/infrastructure/firewall/: manager.rs  mod.rs
pc/src/infrastructure/input/: enigo_adapter.rs  mod.rs
pc/src/infrastructure/mdns/: advertiser.rs  mod.rs
pc/src/infrastructure/websocket/: mod.rs  server.rs
pc/src/presentation/: main.rs  mod.rs
pc/src/tests/: integration.rs  mod.rs  mouse_clamping.rs  screen_capture.rs
(+3 files in other folders)
