[package]
name = "remote_keyboard_pc"
version = "0.1.0"
edition = "2021"
description = "PC application for RemoteKeyboard - Control your PC from your phone"
authors = ["RemoteKeyboard Team"]
default-run = "remote_keyboard_pc"

[lib]
name = "remote_keyboard_pc"
path = "src/lib.rs"

[[bin]]
name = "remote_keyboard_pc"
path = "src/presentation/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# WebSocket
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# mDNS discovery
mdns-sd = "0.11"

# Input simulation (for keyboard/mouse control)
enigo = "0.6"

# Screen capture with real cursor (for streaming to mobile)
windows-capture = "=1.5.0"
image = "0.25"
base64 = "0.22"

# Windows API for cursor position and monitor info (using winapi for stability)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "windef",
    "wingdi"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Hostname
hostname = "0.4"

# Arc and sync
parking_lot = "0.12"

# Futures
futures = "0.3"
futures-util = "0.3"

# Async trait
async-trait = "0.1"

# Tauri (for system tray and window)
tauri = "2.0"
tauri-plugin-shell = "2.0"

[build-dependencies]
tauri-build = "2.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
assert-json-diff = "2.0"

# For e2e test binary
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"

[features]
default = []
test-mocks = []
